fea-rs/test-data/parse-tests/bad/suffix_metrics.fea
feature kern {
    pos p (wght=1000f:-100 wght=200D:0);
} kern;
